# microgpt

./: .gitignore  .pmat-metrics.toml  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: book.yml  ci.yml
.pmat/: asset-layout-cache.json  context.db  deps-cache.json  project.toml  verification-levels.json
.pmat/context.idx/: manifest.json
.pmat/metrics/: dependencies.json
.pv/: lint-previous.json
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/architecture/: attention.md  model.md  training.md
book/src/contracts/: reference.md  verification-ladder.md
book/src/introspection/: explain.md  inspect.md  trace.md
contracts/: binding.yaml  microgpt-v1.yaml
contracts/.pv/cache/lint/: 22dac10318ae625b.json  5e34da5c125e7ad9.json  859f4acc32366773.json  99e897e8f0f04694.json
data/: parity_reference.json
examples/: explain_attention.rs  inspect_model.rs  trace_forward.rs
lean/: MicroGPT.lean
scripts/: generate_reference.py
src/: lib.rs  main.rs
tests/: book_contract.rs  contract_traits.rs  parity.rs  readme_contract.rs  svg_contract.rs
